# MCCM-Robotic-Observatory

./: .gitignore  .travis.yml  Dockerfile  README.md
bibliography/indi/: README.md
drivers/: 01-indi-install.sh  02-builddriver.sh  03-copy-files-from-project.sh  OLD-01-dev-environment.sh  README.md
drivers/indi-plcdome/: CMakeLists.txt  config.h.cmake  indi_plcdome.xml.cmake  maxdomeii.cpp  plcdome.cpp  plcdome.h  plcdomedriver.c  plcdomedriver.h
install/indi/: 01-install.sh
install/rts2/: 01-install.sh  02-configure.sh
